# sddm-conf

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Config.cmake  LICENSE  README.md
.github/workflows/: build.yml
cmake/LXQTBuildTools/: LXQtTranslateTs.cmake
resources/: about.info.md.in  resources.qrc  sddm_conf.appdata.xml  sddm_conf.desktop.in
resources/freedesktop/: application.appdata.description.md  application.appdata.xml.in  application.desktop.in
resources/translations/: CMakeLists.txt  sddm-conf.ts  sddm-conf_bg.ts  sddm-conf_ca.ts  sddm-conf_cs.ts  sddm-conf_de.ts  sddm-conf_es.ts  sddm-conf_et.ts  sddm-conf_fi.ts  sddm-conf_fr.ts  sddm-conf_he.ts  sddm-conf_hr.ts  sddm-conf_hu.ts  sddm-conf_it.ts  sddm-conf_ja.ts  sddm-conf_ka.ts  sddm-conf_kab.ts  sddm-conf_ko.ts  sddm-conf_lt.ts  sddm-conf_nb_NO.ts  sddm-conf_nl.ts  sddm-conf_pa.ts  sddm-conf_pl.ts  sddm-conf_pt.ts  sddm-conf_pt_BR.ts  sddm-conf_ru.ts  sddm-conf_si.ts  sddm-conf_sk.ts  sddm-conf_tr.ts  sddm-conf_uk.ts  sddm-conf_zh_CN.ts  sddm-conf_zh_TW.ts  sddm_conf.desktop.yaml  sddm_conf_bg.desktop.yaml  sddm_conf_ca.desktop.yaml  sddm_conf_cs.desktop.yaml  sddm_conf_el.desktop.yaml  sddm_conf_et.desktop.yaml  sddm_conf_fi.desktop.yaml  sddm_conf_fr.desktop.yaml  (+15 more)
src/: application.cpp  application.hpp  dialogabout.cpp  dialogabout.hpp  dialogabout.ui  maindialog.cpp  maindialog.hpp  maindialog.ui  settings.cpp  settings.hpp
